Fixed the gap in the header

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,9 +11,13 @@
     .nametag {
         width: 100%;
         text-align: center;
+        margin: 0px;
+        padding: 0px;
     }
     header {
         justify-content: center;
+        margin: 0px;
+        padding: 0px;
     }
     .nametag h1 {
         display: none;
@@ -28,6 +32,7 @@
         height: auto;
         padding: 0px;
         margin: 0px;
+        
     }
     .featured {
         text-align: center;
